# EmberHoneypot

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  config.py  pyproject.toml
api/: __init__.py  dependencies.py  main.py  models.py  routes.py  websocket.py
core/: __init__.py  attacker_profiler.py  auth.py  emulator.py  engine.py  interaction_logger.py  logger.py  orchestrator.py  profiler.py  rate_limiter.py  service_emulator.py
deception/: __init__.py  decoy_persona.py  disinformation_injector.py  fake_data_generator.py  response_engine.py
integration/: __init__.py  ember_adapter.py
intel/: __init__.py  ioc_generator.py  pattern_matcher.py  sonar_enrichment.py  threat_scorer.py  ttp_extractor.py
models/: __init__.py  attacker.py  honeypot.py  interaction.py  ioc.py
monitoring/: __init__.py  health.py  logging_config.py  metrics.py  middleware.py  tracing.py
swarm/: __init__.py  adaptive_defense.py  centuria_adapter.py  feed_publisher.py  threat_feed.py
tests/: conftest.py  test_adversarial.py  test_api.py  test_config.py  test_core.py  test_deception.py  test_integration.py  test_intel.py  test_sonar_enrichment.py  test_swarm.py
