[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ember-honeypot"
version = "0.1.0-alpha"
description = "EmberHoneypot — modular AI deception and threat-intelligence platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["honeypot", "security", "threat-intelligence", "deception", "fastapi"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "faker>=22.0.0",
    "prometheus-client>=0.20.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
ember-honeypot = "honeypot.api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["honeypot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["honeypot"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
